--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+
 .App-link {
   color: #61dafb;
 }
 
 * {
-  color: white;
+  font-family: 'Readex Pro';
+  font-weight: 500;
+  color: #353535;
 }
