--- a/frontend/src/components/Headers.css
+++ b/frontend/src/components/Headers.css
@@ -31,6 +31,8 @@ img {
   line-height: 24px;
   color: #FFFFFF;
   border-radius: 4px;
+  border: none;
+  padding-left: 20px;
 }
 
 .projects {
@@ -44,6 +46,7 @@ img {
   color: #1D83C2;
   border-radius: 4px;
   border:none;
+  padding-left: 20px;
 }
 
 .new__user {
@@ -55,12 +58,47 @@ img {
   height: 33px;
   margin: 10px;
   background-color: #1D83C2;
-  border-radius: 4px;
+  border-radius: 6px;
+  border: none;
   font-size: 14px;
   color: white;
+  padding-left: 30px;
 }
 
 button:hover {
   background-color: #006bae;
   color: white;
+}
+
+.projects__icon {
+  width: 20px;
+  height: 16px;
+  position: absolute;
+  top: 18px;
+  margin-left: 5px;
+}
+
+.projects__icon:hover {
+  cursor: default;
+}
+
+.PersonAddIcon {
+  width: 20px;
+  height: 16px;
+  position: absolute;
+  top: 29px;
+  right: 135px;
+  margin-left: 5px;
+}
+
+.PersonAddIcon:hover {
+  cursor: default;
+}
+
+.GroupIcon {
+  width: 20px;
+  height: 16px;
+  position: absolute;
+  top: 24px;
+  margin-left: 8px;
 }
