--- a/frontend/src/components/Headers.css
+++ b/frontend/src/components/Headers.css
@@ -1,6 +1,6 @@
 .App-header {
   margin-left: 15px;
-  min-height: 10vh;
+  min-height: 40px;
   display: flex;
   flex-direction: row;
   color: white;
@@ -32,13 +32,19 @@ img {
   color: #FFFFFF;
   border-radius: 4px;
   border: none;
-  padding-left: 20px;
+  padding-left: 30px;
+  margin-left: 30px;
 }
 
-.projects {
+.users:hover {
+  background-color: #006bae;
+  cursor: pointer;
+}
+
+.headerProjectsButton {
   background-color: white;
   border-color: white;
-  width: 92px;
+  width: 102px;
   height: 74px;
   margin-left: 5px;
   font-size: 16px;
@@ -46,7 +52,8 @@ img {
   color: #1D83C2;
   border-radius: 4px;
   border:none;
-  padding-left: 20px;
+  padding-left: 30px;
+  margin-left: 10px;
 }
 
 .new__user {
@@ -65,9 +72,37 @@ img {
   padding-left: 30px;
 }
 
-button:hover {
+.new__user:hover {
+  background-color: #006bae;
+  cursor: pointer;
+}
+
+.delete__user {
+  position: absolute;
+  right: 400px;
+  top: 15px;
+  border-color: white;
+  width: 90px;
+  height: 33px;
+  margin: 10px;
+  background-color: #1D83C2;
+  border-radius: 6px;
+  border: none;
+  font-size: 14px;
+  color: white;
+  padding-left: 30px;
+  margin-right: 30px;
+}
+
+.delete__user:hover {
+  background-color: #006bae;
+  cursor: pointer;
+}
+
+.headerProjectsButton:hover {
   background-color: #006bae;
   color: white;
+  cursor: pointer;
 }
 
 .projects__icon {
@@ -75,24 +110,20 @@ button:hover {
   height: 16px;
   position: absolute;
   top: 18px;
-  margin-left: 5px;
+  left: 470px;
 }
 
 .projects__icon:hover {
-  cursor: default;
+  cursor: pointer;
 }
 
 .PersonAddIcon {
   width: 20px;
   height: 16px;
   position: absolute;
-  top: 29px;
-  right: 135px;
+  top: 5px;
+  right: 85px;
   margin-left: 5px;
-}
-
-.PersonAddIcon:hover {
-  cursor: default;
 }
 
 .GroupIcon {
@@ -100,5 +131,12 @@ button:hover {
   height: 16px;
   position: absolute;
   top: 24px;
-  margin-left: 8px;
+  left: 369px;
+}
+
+.DeleteIcon {
+  position: absolute;
+  top: 4px;
+  right: 58px;
+  margin-left: 5px;
 }
