--- a/frontend/src/components/NewUser.css
+++ b/frontend/src/components/NewUser.css
@@ -24,7 +24,7 @@
     padding-top: 8px;
 }
 
-form {
+.addUser__form {
     position: absolute;
     background-color: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
