--- a/frontend/src/components/Table.css
+++ b/frontend/src/components/Table.css
@@ -22,3 +22,136 @@ td {
   line-height: 21px;
 }
   
+.deleteUsers {
+  position: absolute;
+  top: 112px;
+  left: 1.55%;
+}
+
+.deleteUsersCheckbox {
+  width: 20px;
+  height: 26px;
+}
+
+.selectedRows {
+  position: absolute;
+  top: 32px;
+  right: 550px;
+  color: #1D83C2;
+  font-size: 14px;
+}
+
+.EditIcon:hover {
+  cursor: pointer;
+}
+
+.EditHeader {
+  font-size:x-large;
+  color: white;
+  margin-top: 0;
+}
+
+b {
+  color:#1D83C2
+}
+
+.delete__view {
+  background-color: black;
+  opacity: 0.4;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.delete__divisor {
+  background-color: white;
+  opacity: 0.9999;
+  border: black solid 1px;
+  position: absolute;
+  width: 451px;
+  height: 258px;
+  top: 25%;
+  left: 30%;
+  padding: 0 20px 20px 20px;
+}
+
+.alertTitle {
+  font-size: 16px;
+  margin-left: 30px;
+}
+
+.alertDeleteIcon {
+  position: absolute;
+  top: 10px;
+}
+
+.deleteAlert {
+  border-bottom: rgb(175, 175, 175) solid 1px;
+  margin: none;
+  height: 25px;
+}
+
+.deleteP {
+  padding-top: 20px;
+  padding-left: 50px;
+  padding-bottom: 50px;
+}
+
+.deleteButtons {
+  margin-top: 50px;
+  margin-left: 150px;
+  display: flex;
+  flex-direction: row;
+}
+
+.deleteSubmitButton {
+  background-color: #C21D1D;
+  border: none;
+  border-radius: 4px;
+  margin-right: 20px;
+  color: white;
+  width: 365px;
+  height: 45px;
+  padding-left: 0 !important;
+}
+
+.deleteSubmitButton:hover {
+  background-color: #750000;
+  cursor: pointer;
+}
+
+.projects {
+  background-color: white;
+  border-color: white;
+  width: 102px;
+  height: 74px;
+  margin-left: 5px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #1D83C2;
+  border-radius: 4px;
+  border:none;
+  padding-left: 30px;
+  margin-left: 10px;
+}
+
+.projects:hover {
+  background-color: #006bae;
+  color: white;
+  cursor: pointer;
+}
+
+.cancel {
+  border: #464646 solid 1px;
+  border-radius: 4px;
+  background-color: white;
+  width: 345px;
+  height: 45px;
+}
+
+.cancel:hover {
+  background-color: #cfcfcf;
+  cursor: pointer;
+  border: white;
+}
