--- a/frontend/src/components/Headers.css
+++ b/frontend/src/components/Headers.css
@@ -1,9 +1,10 @@
 .App-header {
+  position: absolute;
   margin-left: 15px;
-  min-height: 40px;
+  width: 100%;
+  height: 40px;
   display: flex;
   flex-direction: row;
-  color: white;
 }
 
 .header__left {
@@ -21,11 +22,21 @@ img {
   height: 51px;
 }
 
+.logo {
+  position: absolute;
+}
+
+.logotext {
+  position: absolute;
+  left: 80px;
+}
+
 .users {
+  position: absolute;
   background-color: #1D83C2;
   border-color: white;
   width: 92px;
-  height: 74px;
+  height: 71px;
   margin-left: 5px;
   font-size: 16px;
   line-height: 24px;
@@ -34,6 +45,7 @@ img {
   border: none;
   padding-left: 30px;
   margin-left: 30px;
+  left: 330px;
 }
 
 .users:hover {
@@ -52,6 +64,7 @@ img {
   color: #1D83C2;
   border-radius: 4px;
   border:none;
+  position: absolute;
   padding-left: 30px;
   margin-left: 10px;
 }
@@ -110,7 +123,15 @@ img {
   height: 16px;
   position: absolute;
   top: 18px;
-  left: 470px;
+  left: 6px;
+}
+
+.ProjectsIcon {
+  width: 20px;
+  height: 16px;
+  position: absolute;
+  top: 16px;
+  left: 6px;
 }
 
 .projects__icon:hover {
@@ -131,7 +152,7 @@ img {
   height: 16px;
   position: absolute;
   top: 24px;
-  left: 369px;
+  left: 8px;
 }
 
 .DeleteIcon {
