--- a/frontend/src/components/ProjectsHeader.css
+++ b/frontend/src/components/ProjectsHeader.css
@@ -25,13 +25,28 @@ h2 {
   color: #1D83C2;
   border-radius: 4px;
   border: none;
-  padding-left: 20px;
+  padding-left: 30px;
+  margin-left: 30px;
+}
+
+.projectsGroupIcon {
+  width: 20px;
+  height: 16px;
+  position: absolute;
+  top: 24px;
+  left: 369px;
+}
+
+.projectsUsers:hover {
+  background-color: #006bae;
+  cursor: pointer;
+  color: white;
 }
 
 .projectsHeader {
   background-color: #1D83C2;
   border-color: white;
-  width: 92px;
+  width: 102px;
   height: 74px;
   margin-left: 5px;
   font-size: 16px;
@@ -39,6 +54,11 @@ h2 {
   color: white;
   border-radius: 4px;
   border:none;
-  padding-left: 20px;
+  padding-left: 30px;
+  margin-left: 10px;
 }
 
+.projectsHeader:hover {
+  background-color: #006bae;
+  cursor: pointer;
+}
