--- a/frontend/src/components/Table.css
+++ b/frontend/src/components/Table.css
@@ -14,6 +14,11 @@ th {
   overflow: auto;
 }
 
+.header__div {
+  height: 71px;
+  background-color: white;
+}
+
 td {
   border-bottom: 1px solid #D6D6D6 !important;
   font-style: normal;
@@ -125,7 +130,7 @@ b {
   background-color: white;
   border-color: white;
   width: 102px;
-  height: 74px;
+  height: 71px;
   margin-left: 5px;
   font-size: 16px;
   line-height: 24px;
@@ -134,6 +139,9 @@ b {
   border:none;
   padding-left: 30px;
   margin-left: 10px;
+  position: absolute;
+  left: 450px;
+  top: 0px;
 }
 
 .projects:hover {
